Feat: Review Form in the products

--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -112,7 +112,7 @@
                                 </h1>
                                 <p class="mt-55 mb-55" data-animation="fadeInUp" data-delay="1.2s">Revolutionising Smart City Infrastructure
                                 </p>
-                                <a data-animation="fadeInUp" data-delay="1.6s" href="about-2.html"
+                                <a data-animation="fadeInUp" data-delay="1.6s" href="{% url 'about' %}"
                                     class="btn-one"><span>Discover
                                         with us</span> <i class="fa-solid fa-angles-right"></i></a>
                             </div>
@@ -123,7 +123,7 @@
                                 </h1>
                                 <p class="mt-55 mb-55" data-animation="fadeInUp" data-delay="1.2s">Revolutionising Smart City Infrastructure
                                 </p>
-                                <a data-animation="fadeInUp" data-delay="1.6s" href="about-2.html"
+                                <a data-animation="fadeInUp" data-delay="1.6s" href="{% url 'about' %}"
                                     class="btn-one"><span>Discover
                                         with us</span> <i class="fa-solid fa-angles-right"></i></a>
                             </div>
