Fix: Products page remove popular products and other categories

--- a/website/templates/website/products.html
+++ b/website/templates/website/products.html
@@ -244,36 +244,10 @@
                                 </div>
                                 <h4 class="mb-30">Categories</h4>
                                 <ul class="right_list mb-40">
-                                    <li><a class="d-block pb-1 mb-2" href="#0">Business</a></li>
-                                    <li><a class="d-block pb-1 mb-2" href="#0">Job Market</a></li>
-                                    <li><a class="d-block pb-1 mb-2" href="#0">Marketing</a></li>
-                                    <li><a class="d-block pb-1 mb-2" href="#0">News</a></li>
-                                    <li><a class="d-block pb-1 mb-2" href="#0">Social Media</a></li>
-                                    <li><a class="d-block pb-1 mb-2" href="#0">Trends</a></li>
-                                    <li><a class="d-block" href="#0">Writing</a></li>
+                                    <li><a class="d-block pb-1 mb-2" href="#0">LED Lights</a></li>
+                                    <li><a class="d-block pb-1 mb-2" href="#0">Charging Stations</a></li>
+                                    <li><a class="d-block pb-1 mb-2" href="#0">Installation Services</a></li>
                                 </ul>
-                                <h4 class="mb-30">Popular Products</h4>
-                                <div class="recent-post p-0 bor-bottom pb-4 mb-4 sub-bg">
-                                    <div class="img"><img src="{% static 'images/product/product1.png' %}" alt="image"></div>
-                                    <div class="con">
-                                        <h5><a href="shop-single.html">Wood Shelves</a></h5>
-                                        <span>$299</span>
-                                    </div>
-                                </div>
-                                <div class="recent-post p-0 bor-bottom pb-4 mb-4 sub-bg">
-                                    <div class="img"><img src="{% static 'images/product/product2.png' %}" alt="image"></div>
-                                    <div class="con">
-                                        <h5><a href="shop-single.html">Bamboo Pendants</a></h5>
-                                        <span>$299</span>
-                                    </div>
-                                </div>
-                                <div class="recent-post p-0 bor-bottom pb-4 mb-4 sub-bg">
-                                    <div class="img"><img src="{% static 'images/product/product3.png' %}" alt="image"></div>
-                                    <div class="con">
-                                        <h5><a href="shop-single.html">Wood Planters</a></h5>
-                                        <span>$299</span>
-                                    </div>
-                                </div>
                                 <h4 class="mb-30 mt-40">Hot Items</h4>
                                 <div class="swiper hot-items__slider">
                                     <div class="swiper-wrapper">
