--- a/website/templates/website/sustainability.html
+++ b/website/templates/website/sustainability.html
@@ -65,12 +65,11 @@
                                     data-background="{% static 'images/project/project-banner2.jpg' %}"></div>
                                 <div class="container">
                                     <div class="banner-three__content project-banner__content banner-five__content">
-                                        <h2 class="text-white" data-animation="fadeInUp" data-delay="1s">Our projects
-                                            for Ecology <br>
-                                            awareness</h2>
+                                        <h2 class="text-white" data-animation="fadeInUp" data-delay="1s">Our green initiatives
+                                        </h2>
                                         <div class="about-two__right-item" data-animation="fadeInUp" data-delay="1.4s">
                                             <div class="about_info d-flex align-items-center pt-65">
-                                                <a href="about.html" class="btn-one-light"><span>contact us</span> <i
+                                                <a href="{% url 'contact' %}" class="btn-one-light"><span>view more</span> <i
                                                         class="fa-solid fa-angles-right"></i></a>
                                                 <span class="bor-left d-none d-sm-block mx-4"></span>
                                                 <div class="info d-flex flex-wrap align-items-center">
@@ -92,12 +91,11 @@
                                     data-background="{% static 'images/project/project-banner3.jpg' %}"></div>
                                 <div class="container">
                                     <div class="banner-three__content project-banner__content banner-five__content">
-                                        <h2 class="text-white" data-animation="fadeInUp" data-delay="1s">Our projects
-                                            for Ecology <br>
-                                            awareness</h2>
+                                        <h2 class="text-white" data-animation="fadeInUp" data-delay="1s">Our green initiatives
+                                        </h2>
                                         <div class="about-two__right-item" data-animation="fadeInUp" data-delay="1.4s">
                                             <div class="about_info d-flex align-items-center pt-65">
-                                                <a href="about.html" class="btn-one-light"><span>contact us</span> <i
+                                                <a href="{% url 'contact' %}" class="btn-one-light"><span>view more</span> <i
                                                         class="fa-solid fa-angles-right"></i></a>
                                                 <span class="bor-left d-none d-sm-block mx-4"></span>
                                                 <div class="info d-flex flex-wrap align-items-center">
@@ -130,84 +128,27 @@
         <!-- Project area start here -->
         <section class="project-five">
             <div class="row g-0">
-                <div class="col-xxl-3 wow fadeInDown col-lg-6" data-wow-duration="1.2s" data-wow-delay=".2s">
-                    <div class="project-five__image">
-                        <img src="{% static 'images/project/project1.jpg' %}" alt="image">
-                    </div>
-                </div>
-                <div class="col-xxl-3 wow fadeInDown col-lg-6" data-wow-duration="1.4s" data-wow-delay=".4s">
-                    <div class="project-five__item sub-bg">
-                        <div class="project-five__content bg-white">
-                            <h3><a href="project-single.html">How to save plains and forests Capitalize on low
-                                    hanging</a></h3>
-                            <p>We maintain a busy network of forestry and social development staff
-                                along with local
-                                facilitators in the areas we work.</p>
-                            <a href="project-single.html" class="btn-two"><span>details project</span> <i
-                                    class="fa-solid fa-angles-right"></i></a>
+                {% for item in sustainability %}
+                    <!-- Image and Content for each sustainability item -->
+                    <div class="col-xxl-3 wow fadeInDown col-lg-6" data-wow-duration="1.2s" data-wow-delay=".2s">
+                        <div class="project-five__image">
+                            <img src="{{ item.thumbnail_img.url }}" alt="{{ item.title }}">
                         </div>
                     </div>
-                </div>
-                <div class="col-xxl-3 wow fadeInDown col-lg-6" data-wow-duration="1.6s" data-wow-delay=".6s">
-                    <div class="project-five__image">
-                        <img src="{% static 'images/project/project2.jpg' %}" alt="image">
-                    </div>
-                </div>
-                <div class="col-xxl-3 wow fadeInDown col-lg-6" data-wow-duration="1.8s" data-wow-delay=".8s">
-                    <div class="project-five__item sub-bg">
-                        <div class="project-five__content bg-white">
-                            <h3><a href="project-single.html">Project: Planting 300 trees in the city, Bring to the
-                                    table win-win
-                                    survival</a></h3>
-                            <p>We maintain a busy network of forestry and social development staff
-                                along with local
-                                facilitators in the areas we work.</p>
-                            <a href="project-single.html" class="btn-two"><span>details project</span> <i
-                                    class="fa-solid fa-angles-right"></i></a>
+                    <div class="col-xxl-3 wow fadeInDown col-lg-6" data-wow-duration="1.4s" data-wow-delay=".4s">
+                        <div class="project-five__item sub-bg">
+                            <div class="project-five__content bg-white">
+                                <h3><a href="{{ item.get_absolute_url }}">{{ item.title }}</a></h3>
+                                <p>{{ item.content|truncatewords:20 }}</p>
+                                <a href="{{ item.get_absolute_url }}" class="btn-two"><span>details project</span> <i class="fa-solid fa-angles-right"></i></a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-xxl-3 col-lg-6 wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".2s">
-                    <div class="project-five__item sub-bg">
-                        <div class="project-five__content bg-white">
-                            <h3><a href="project-single.html">How to find inspiring solution and movement Leverage agile
-                                    frameworks</a>
-                            </h3>
-                            <p>We maintain a busy network of forestry and social development staff
-                                along with local
-                                facilitators in the areas we work.</p>
-                            <a href="project-single.html" class="btn-two"><span>details project</span> <i
-                                    class="fa-solid fa-angles-right"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xxl-3 col-lg-6 wow fadeInUp" data-wow-duration="1.4s" data-wow-delay=".4s">
-                    <div class="project-five__image">
-                        <img src="{% static 'images/project/project3.jpg' %}" alt="image">
-                    </div>
-                </div>
-                <div class="col-xxl-3 col-lg-6 wow fadeInUp" data-wow-duration="1.6s" data-wow-delay=".6s">
-                    <div class="project-five__item sub-bg">
-                        <div class="project-five__content bg-white">
-                            <h3><a href="project-single.html">Efficiently unleash cross-media information without
-                                    cross-media value.</a>
-                            </h3>
-                            <p>We maintain a busy network of forestry and social development staff
-                                along with local
-                                facilitators in the areas we work.</p>
-                            <a href="project-single.html" class="btn-two"><span>details project</span> <i
-                                    class="fa-solid fa-angles-right"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xxl-3 col-lg-6 wow fadeInUp" data-wow-duration="1.8s" data-wow-delay=".8s">
-                    <div class="project-five__image">
-                        <img src="{% static 'images/project/project4.jpg' %}" alt="image">
-                    </div>
-                </div>
+                {% endfor %}
             </div>
         </section>
         <!-- Project area end here -->
+
 
         <!-- achievement area start here -->
         <section class="achievement-five mt-130 mb-130">
@@ -247,10 +188,11 @@
                         </div>
                     </div>
                     <div class="achievement-five__bg-overlay">
-                        <img src="{% static 'images/bg/achievement-bg-image.jpg' %}" alt="image">
+                        <img src="{% static 'images/bg/achievement-bg-image.jpg' %}" alt="">
                     </div>
                 </div>
             </div>
         </section>
         <!-- achievement area end here -->
+</main>
 {% endblock %}
