--- a/website/templates/website/feedback.html
+++ b/website/templates/website/feedback.html
@@ -15,17 +15,152 @@
             padding-bottom: 130px;
         }
 </style>
-<main>
-     <!-- Page banner area start here -->
-    <section class="page-banner bg-image pt-130 pb-130">
-        <div class="container">
-            <h2 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".2s">Feedback</h2>
-            <div class="breadcrumb-list wow fadeInUp" data-wow-duration="1.4s" data-wow-delay=".4s">
-                <a href="{% url 'index' %}">Home :</a>
-                <span class="primary-color">Feedback</span>
-            </div>
+<!-- Page banner area start here -->
+<section class="page-banner bg-image pt-130 pb-130">
+    <div class="container">
+        <h2 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".2s">Feedback</h2>
+        <div class="breadcrumb-list wow fadeInUp" data-wow-duration="1.4s" data-wow-delay=".4s">
+            <a href="{% url 'index' %}">Home :</a>
+            <span class="primary-color">Feedback</span>
         </div>
-    </section>
-    <!-- Page banner area end here -->
+    </div>
+</section>
+<!-- Page banner area end here -->
+
+<main>
+<!-- Shop single area start here -->
+        <section class="shop-single pt-130 pb-130">
+            <div class="container">
+                <!-- product-details area start here -->
+                <div class="product-details-single pb-40">
+                    <div class="row g-4">
+                        <div class="col-lg-5">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- description review area start here -->
+                <div class="shop-singe-tab">
+                    <ul class="nav nav-pills mb-4 bor-top bor-bottom py-2">
+                        <li class="nav-item">
+                            <a href="#description" data-bs-toggle="tab" class="nav-link ps-0 active">
+                                <h4 class="text-uppercase">description</h4>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#review" data-bs-toggle="tab" class="nav-link">
+                                <h4 class="text-uppercase">reviews (4)</h4>
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="tab-content">
+                        <div id="description" class="tab-pane fade show active">
+                            <p class="pb-4 text-justify">                      
+                        </div>
+                        <div id="review" class="tab-pane fade">
+                            <div class="review-wrp">
+                                <div class="abmin d-flex flex-wrap flex-md-nowrap align-items-center pb-4">
+                                    <div class="img pb-4 pb-md-0 me-4">
+                                        <img src="'images/about/comment3.png" alt="image">
+                                    </div>
+                                    <div class="content position-relative p-4 bor">
+                                        <div class="head-wrp pb-1 d-flex flex-wrap justify-content-between">
+                                            <div class="star primary-color">
+                                                <span><i class="fa-solid fa-star sm-font"></i></span>
+                                                <span><i class="fa-solid fa-star sm-font"></i></span>
+                                                <span><i class="fa-solid fa-star sm-font"></i></span>
+                                                <span><i class="fa-solid fa-star sm-font"></i></span>
+                                                <span><i class="fa-solid fa-star-half-stroke sm-font"></i></span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="abmin d-flex flex-wrap flex-md-nowrap align-items-center pb-4">
+                                    <div class="img pb-4 pb-md-0 me-4">
+                                        <img src="'images/about/comment2.png" alt="image">
+                                    </div>
+                                    <div class="content position-relative p-4 bor">
+                                        <div class="head-wrp pb-1 d-flex flex-wrap justify-content-between">
+                                            <div class="star primary-color">
+                                                <span><i class="fa-solid fa-star sm-font"></i></span>
+                                                <span><i class="fa-solid fa-star sm-font"></i></span>
+                                                <span><i class="fa-solid fa-star sm-font"></i></span>
+                                                <span><i class="fa-solid fa-star sm-font"></i></span>
+                                                <span><i class="fa-solid fa-star-half-stroke sm-font"></i></span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="abmin d-flex flex-wrap flex-md-nowrap align-items-center pb-4">
+                                    <div class="img pb-4 pb-md-0 me-4">
+                                        <img src="'images/about/comment1.png" alt="image">
+                                    </div>
+                                    <div class="content position-relative p-4 bor">
+                                        <div class="head-wrp pb-1 d-flex flex-wrap justify-content-between">
+                                            <div class="star primary-color">
+                                                <span><i class="fa-solid fa-star sm-font"></i></span>
+                                                <span><i class="fa-solid fa-star sm-font"></i></span>
+                                                <span><i class="fa-solid fa-star sm-font"></i></span>
+                                                <span><i class="fa-solid fa-star sm-font"></i></span>
+                                                <span><i class="fa-solid fa-star-half-stroke sm-font"></i></span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="abmin d-flex flex-wrap flex-md-nowrap align-items-center pb-4">
+                                    <div class="img pb-4 pb-md-0 me-4">
+                                        <img src="'images/about/comment4.png" alt="image">
+                                    </div>
+                                    <div class="content position-relative p-4 bor">
+                                        <div class="head-wrp pb-1 d-flex flex-wrap justify-content-between">
+                                            <div class="star primary-color">
+                                                <span><i class="fa-solid fa-star sm-font"></i></span>
+                                                <span><i class="fa-solid fa-star sm-font"></i></span>
+                                                <span><i class="fa-solid fa-star sm-font"></i></span>
+                                                <span><i class="fa-solid fa-star sm-font"></i></span>
+                                                <span><i class="fa-solid fa-star-half-stroke sm-font"></i></span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="section-title mt-5 py-15 mb-30">
+                                    <h2 class="text-capitalize primary-color mb-10">Add a Review</h2>
+                                    <p class="mb-20">All Required fields are marked *</p>
+                                    <div class="shop-single__rate-now">
+                                        <p>Rate this product? *</p>
+                                        <div class="star" id="rating-stars">
+                                            <span data-value="1"><i class="fa-solid fa-star"></i></span>
+                                            <span data-value="2"><i class="fa-solid fa-star"></i></span>
+                                            <span data-value="3"><i class="fa-solid fa-star"></i></span>
+                                            <span data-value="4"><i class="fa-solid fa-star"></i></span>
+                                            <span data-value="5"><i class="fa-solid fa-star"></i></span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="comment-form">
+                                    <form method="post" id="review_form">
+                                        {% csrf_token %}
+                                        {{ form.as_p }}
+                                        <input type="hidden" id="rating" name="rating" value="0">
+                                    </form>
+                                    <div class="btn-wrp">
+                                        <button class="g-recaptcha btn-one" 
+                                                data-sitekey="6LeavgsqAAAAAEm5c6yrGnTh8KHoginxZkd0-_UN" 
+                                                data-callback="onSubmit" 
+                                                data-action="submit">
+                                            <span>Post Review</span>
+                                        </button>
+                                    </div>
+                                </div>
+                                    <div id="form-messages" class="col-md-12 mt-3"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- description review area end here -->
+        </section>
+        <!-- Shop single area end here -->
 </main>
 {% endblock %}
