--- a/website/templates/website/about.html
+++ b/website/templates/website/about.html
@@ -15,6 +15,24 @@
         .pb-130 {
             padding-bottom: 130px;
         }
+        .team__item-image {
+            width: 100%;
+            height: 400px;
+            object-fit: cover;
+            object-position: center;
+        }
+        .team__item-image img {
+            width: 100%;
+            height:100%;
+            object-fit: cover;
+            object-position: center;
+        }
+        .team__item-image {
+            max-height: 100%; /* Ensure the image container does not exceed the height of the content */
+            overflow: hidden; /* Hide any part of the image that overflows */
+            display: flex; /* Align the image container with the content height */
+            align-items: stretch; /* Stretch the image container to match content height */
+        }
 </style>
 <main>
         <!-- Page banner area start here -->
