--- a/website/templates/website/sustainability.html
+++ b/website/templates/website/sustainability.html
@@ -14,6 +14,25 @@
         .pb-130 {
             padding-bottom: 130px;
         }
+        .project-five__image {
+            width: 100%;
+            height: 420px;
+            object-fit: cover;
+            object-position: center;
+        }
+        .project-five__image img {
+            width: 100%;
+            height: 100%; /* Ensure the image height matches the container height */
+            object-fit: cover;
+            object-position: center;
+        }
+
+        .project-five__image {
+            max-height: 100%; /* Ensure the image container does not exceed the height of the content */
+            overflow: hidden; /* Hide any part of the image that overflows */
+            display: flex; /* Align the image container with the content height */
+            align-items: stretch; /* Stretch the image container to match content height */
+        }
 </style>
 <main>
         <!-- Page banner area start here -->
@@ -146,6 +165,15 @@
                     </div>
                 {% endfor %}
             </div>
+            <div class="pagi-wrp mt-65 justify-content-center wow fadeInDown" data-wow-duration="1.2s" data-wow-delay=".2s">
+                {% for page_num in sustainability.paginator.page_range %}
+                    {% if sustainability.number == page_num %}
+                        <a href="?page={{ page_num }}" class="pagi-btn active">{{ page_num }}</a>
+                    {% else %}
+                        <a href="?page={{ page_num }}" class="pagi-btn">{{ page_num }}</a>
+                    {% endif %}
+                {% endfor %}
+            </div>
         </section>
         <!-- Project area end here -->
 
@@ -157,10 +185,10 @@
                     <div class="row g-4 align-items-center justify-content-between">
                         <div class="col-lg-5">
                             <div class="achievement-five__item">
-                                <h3 class="wow fadeInDown" data-wow-duration="1.2s" data-wow-delay=".2s">What have we
-                                    achieved so far?</h3>
+                                <h3 class="wow fadeInDown" data-wow-duration="1.2s" data-wow-delay=".2s">CSR Projects
+                                </h3>
                                 <a href="team-2.html" class="btn-two-light wow fadeInUp mt-50" data-wow-duration="1.2s"
-                                    data-wow-delay=".2s"><span>join our team</span> <i
+                                    data-wow-delay=".2s"><span>view more</span> <i
                                         class="fa-solid fa-angles-right"></i></a>
 
                             </div>
